--- a/client/src/pages/hotels/hotels.scss
+++ b/client/src/pages/hotels/hotels.scss
@@ -38,6 +38,14 @@
         input:focus {
           outline: none;
         }
+
+        button {
+          background-color: themed("buttonPrimaryColor");
+          border: none;
+          border-radius: 5px;
+          height: 30px;
+          color: white;
+        }
       }
       .search:hover {
         border: 1.5px solid themed("buttonPrimaryColor");
@@ -50,45 +58,11 @@
 
       .items {
         display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        .item {
-          cursor: pointer;
-          background-color: themed("bg");
-          box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
-          -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
-          -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
-          border-radius: 10px;
-          background-color: themed("bg");
-          color: themed("textColor");
-          padding: 10px 20px;
-          .user-profile {
-            display: flex;
-            gap: 20px;
-
-            img {
-              height: 50px;
-              width: 50px;
-              border-radius: 50%;
-              object-fit: cover;
-            }
-
-            .user-details {
-              display: flex;
-              align-items: center;
-              width: 100%;
-              justify-content: space-between;
-
-              .online {
-                height: 10px;
-                width: 10px;
-                border-radius: 50%;
-                background-color: green;
-              }
-            }
-          }
-        }
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-evenly;
+        gap: 20px;
+        width: 100%;
 
         .item:hover {
           background-color: themed("bgSoft");
