--- a/client/src/components/posts/posts.scss
+++ b/client/src/components/posts/posts.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    min-height: 100vh;
 
     .create-post {
       box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
@@ -77,6 +78,17 @@
             border-radius: 3px;
           }
         }
+      }
+    }
+    .no-posts {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 200px;
+      .message {
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
