--- a/client/src/pages/settings/settings.scss
+++ b/client/src/pages/settings/settings.scss
@@ -42,6 +42,83 @@
           background-color: themed("bgSoft");
         }
       }
+      .payment {
+        display: flex;
+        flex-direction: column;
+        min-height: 50px;
+        background-color: themed("bg");
+        box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        border-radius: 10px;
+        color: themed("textColor");
+
+        .title {
+          cursor: pointer;
+
+          padding: 10px 20px;
+          min-height: 50px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          font-weight: 500;
+          font-size: large;
+        }
+
+        .payment-details {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          .payment-option {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            padding: 10px;
+
+            .payment-method,
+            .phone {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+            }
+          }
+        }
+        .payment-history {
+          h4 {
+            margin-bottom: 20px;
+          }
+
+          .table-container {
+            overflow-x: auto;
+
+            table {
+              width: 100%;
+              border-collapse: collapse;
+
+              th,
+              td {
+                padding: 10px;
+                text-align: left;
+                border: 1px solid #ddd;
+              }
+
+              th {
+                background-color: #f2f2f2;
+                font-weight: bold;
+              }
+
+              tr:nth-child(even) {
+                background-color: #f2f2f2;
+              }
+
+              td:last-child {
+                white-space: nowrap;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
