--- a/admin/src/components/verificationTable/verificationTable.scss
+++ b/admin/src/components/verificationTable/verificationTable.scss
@@ -1,8 +1,8 @@
-.datatable {
+.verificationtable {
   height: 500px;
   padding: 20px;
 
-  .datatableTitle {
+  .verificationtableTitle {
     width: 100%;
     font-size: 24px;
     color: gray;
@@ -48,7 +48,7 @@
       background-color: rgba(255, 217, 0, 0.05);
       color: goldenrod;
     }
-    &.not {
+    &.revoked {
       background-color: rgba(255, 0, 0, 0.05);
       color: crimson;
     }
